# optical-iscai-sim

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml  paper_baseline.yaml
dataset/: schema.yaml
experiments/configs/: highway.yaml
paper/: model_inventory.md  paper_parameters.md
src/optical_iscai/: __init__.py  cfar.py  cli.py  clustering.py  dataset.py  evaluation.py  experiment.py  frame.py  generate.py  noise.py  pipeline.py  propagation.py  range_doppler.py  receiver.py  reporting.py  scenarios.py  sequence.py  tracking.py  waveform.py
tests/: test_cfar.py  test_cli.py  test_clustering.py  test_dataset.py  test_evaluation.py  test_experiment.py  test_frame.py  test_noise.py  test_pipeline.py  test_propagation.py  test_range_doppler.py  test_receiver.py  test_reporting.py  test_scenarios.py  test_sequence.py  test_tracking.py  test_waveform.py
