[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optical-iscai-sim"
version = "0.1.0"
description = "Synthetic simulation and dataset framework for optical ISCAI research"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Panagiota Grosdouli" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
optical-iscai-generate = "optical_iscai.generate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
